               log of infinite (Inf, -Inf) values, which produced 'NaN'
               warnings.

         • ‘get_RLum()’

             • The argument ‘subset’ was broken and not working
               anymore, similar to the S3-method ‘subset’ dispatching
               to ‘get_RLum’ for ‘RLum.Analysis’-objects.  Both issues
               have been fixed.

         • ‘template_DRAC()’

             • New argument ‘preset’ to allow the selection of
               pre-defined templates for various configurations (e.g.,
               ‘'quartz_coarse'’) for quartz coarse grain data. The
               templates bring pre-filled values to speed up the
               workflow, however, they do not free the researcher from
               cross-checking these values.

  Internals:

         • Lower required dependent package versions to get the package
           passed on CRAN.

         • Further compress example data ... it was not yet the
           optimum.

         • Further compress 'vignettes'.

Changes in version 0.8.0 (Feburary 9th, 2018):

  New functions:

         • ‘analyse_Al2O3C_ITC()’: Function to analyse data determined
           to correct irradiation times as suggested by Kreutzer et
           al., 2018

         • ‘analyse_Al2O3C_CrossTalk()’: Function to analyse data to
           analyse crosstalk measurements as shown in Kreutzer et al.,
           2018

         • ‘analyse_Al2O3C_Measurement()’: Function to analyse Al2O3:C
           data as shown by Kreutzer et al., 2018

         • ‘convert_Activity2Concentration()’: converts nuclide
           activity data (Bq/kg) to concentrations (ppm or %) and vice
           versa

         • ‘convert_RLum2Risoe.BINfileData()’: Function to convert
           ‘RLum.Analysis’ and ‘RLum.Data.Curve’ objects to
           ‘Risoe.BINfileData’, which can be exported to BIN/BINX-files
           using the function ‘write_R2BIN()’.

         • ‘calc_WodaFuchs2008()’: Function to obtain the equivalent