@@ -94,11 +94,11 @@ this sample.\cr
 In the plot the normalised De is shown on the y-axis, i.e. obtained De/Given Dose.
 }
 \note{
-Further data and plot arguments can be added by using the appropiate R
+Further data and plot arguments can be added by using the appropriate R
 commands.
 }
 \section{Function version}{
- 0.1.11 (2018-01-21 17:22:38)
+ 0.1.12 (2018-02-23 10:02:35)
 }
 
 \examples{
@@ -166,7 +166,7 @@ plot_DRTResults(values = ExampleData.DeValues$BT998[7:11,],
 } 
 
 \section{How to cite}{
-Kreutzer, S., Dietze, M. (2018). plot_DRTResults(): Visualise dose recovery test results. Function version 0.1.11. In: Kreutzer, S., Burow, C., Dietze, M., Fuchs, M.C., Schmidt, C., Fischer, M., Friedrich, J. (2018). Luminescence: Comprehensive Luminescence Dating Data Analysis. R package version 0.8.1. https://CRAN.R-project.org/package=Luminescence
+Kreutzer, S., Dietze, M. (2018). plot_DRTResults(): Visualise dose recovery test results. Function version 0.1.12. In: Kreutzer, S., Burow, C., Dietze, M., Fuchs, M.C., Schmidt, C., Fischer, M., Friedrich, J. (2018). Luminescence: Comprehensive Luminescence Dating Data Analysis. R package version 0.8.1. https://CRAN.R-project.org/package=Luminescence
 }
 
 \references{
@@ -179,7 +179,7 @@ single-aliquot regeneration dating protocols. Radiation Measurements, 41,
 \link{plot}
 }
 \author{
-Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)\cr
+Sebastian Kreutzer, IRAMAT-CRP2A, Université Bordeaux Montaigne (France)\cr
 Michael Dietze, GFZ Potsdam (Germany)
 \cr R Luminescence Package Team}
 \keyword{dplot}
